package UnityEngine;

message MyProtoClass {
   optional Vector2 v2 = 1;
   optional Vector3 v3 = 2;
   optional Vector4 v4 = 3;
}
message Vector2 {
   optional float x = 1;
   optional float y = 2;
}
message Vector3 {
   optional float x = 1;
   optional float y = 2;
   optional float z = 3;
}
message Vector4 {
   optional float x = 1;
   optional float y = 2;
   optional float z = 3;
   optional float w = 4;
}
